7A_clases_verano/Streamlint/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'.'", "':'", "','", "'{'", "'}'", 
                     "'('", "')'", "'='", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'++'", "'--'", "'!'", "'*'", "'/'", "'%'", 
                     "'+'", "'-'", "'<'", "'>'", "'<='", "'>='", "'=='", 
                     "'!='", "'&&'", "'||'", "'class'", "'interface'", "'abstract'", 
                     "'sealed'", "'static'", "'readonly'", "'const'", "'virtual'", 
                     "'override'", "'public'", "'private'", "'protected'", 
                     "'internal'", "'new'", "'using'", "'if'", "'else'", 
                     "'for'", "'while'", "'switch'", "'case'", "'default'", 
                     "'break'", "'return'", "'try'", "'catch'", "'finally'", 
                     "'throw'", "'int'", "'float'", "'double'", "'decimal'", 
                     "'bool'", "'string'", "'char'", "'void'", "'object'", 
                     "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "INTERFACE", 
                      "ABSTRACT", "SEALED", "STATIC", "READONLY", "CONST", 
                      "VIRTUAL", "OVERRIDE", "PUBLIC", "PRIVATE", "PROTECTED", 
                      "INTERNAL", "NEW", "USING", "IF", "ELSE", "FOR", "WHILE", 
                      "SWITCH", "CASE", "DEFAULT", "BREAK", "RETURN", "TRY", 
                      "CATCH", "FINALLY", "THROW", "INT_T", "FLOAT_T", "DOUBLE_T", 
                      "DECIMAL_T", "BOOL_T", "STRING_T", "CHAR_T", "VOID_T", 
                      "OBJECT_T", "NULL_LIT", "BOOL", "FLOAT", "INT", "STRING", 
                      "CHAR", "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_usingDirective = 1
    RULE_qualifiedName = 2
    RULE_typeDeclaration = 3
    RULE_classDeclaration = 4
    RULE_classModifier = 5
    RULE_inheritanceList = 6
    RULE_classBody = 7
    RULE_classMember = 8
    RULE_interfaceDeclaration = 9
    RULE_interfaceBody = 10
    RULE_interfaceMember = 11
    RULE_fieldDeclaration = 12
    RULE_fieldModifier = 13
    RULE_constructorDeclaration = 14
    RULE_methodDeclaration = 15
    RULE_methodModifier = 16
    RULE_accessModifier = 17
    RULE_parameterList = 18
    RULE_parameter = 19
    RULE_type = 20
    RULE_block = 21
    RULE_statement = 22
    RULE_localVariableDeclaration = 23
    RULE_variableDeclarator = 24
    RULE_assignmentStatement = 25
    RULE_memberAccessTarget = 26
    RULE_assignmentOperator = 27
    RULE_ifStatement = 28
    RULE_forStatement = 29
    RULE_forInit = 30
    RULE_forUpdate = 31
    RULE_whileStatement = 32
    RULE_switchStatement = 33
    RULE_switchCase = 34
    RULE_defaultCase = 35
    RULE_tryCatchStatement = 36
    RULE_catchClause = 37
    RULE_finallyClause = 38
    RULE_returnStatement = 39
    RULE_expressionStatement = 40
    RULE_expression = 41
    RULE_argumentList = 42
    RULE_literal = 43

    ruleNames =  [ "program", "usingDirective", "qualifiedName", "typeDeclaration", 
                   "classDeclaration", "classModifier", "inheritanceList", 
                   "classBody", "classMember", "interfaceDeclaration", "interfaceBody", 
                   "interfaceMember", "fieldDeclaration", "fieldModifier", 
                   "constructorDeclaration", "methodDeclaration", "methodModifier", 
                   "accessModifier", "parameterList", "parameter", "type", 
                   "block", "statement", "localVariableDeclaration", "variableDeclarator", 
                   "assignmentStatement", "memberAccessTarget", "assignmentOperator", 
                   "ifStatement", "forStatement", "forInit", "forUpdate", 
                   "whileStatement", "switchStatement", "switchCase", "defaultCase", 
                   "tryCatchStatement", "catchClause", "finallyClause", 
                   "returnStatement", "expressionStatement", "expression", 
                   "argumentList", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    CLASS=31
    INTERFACE=32
    ABSTRACT=33
    SEALED=34
    STATIC=35
    READONLY=36
    CONST=37
    VIRTUAL=38
    OVERRIDE=39
    PUBLIC=40
    PRIVATE=41
    PROTECTED=42
    INTERNAL=43
    NEW=44
    USING=45
    IF=46
    ELSE=47
    FOR=48
    WHILE=49
    SWITCH=50
    CASE=51
    DEFAULT=52
    BREAK=53
    RETURN=54
    TRY=55
    CATCH=56
    FINALLY=57
    THROW=58
    INT_T=59
    FLOAT_T=60
    DOUBLE_T=61
    DECIMAL_T=62
    BOOL_T=63
    STRING_T=64
    CHAR_T=65
    VOID_T=66
    OBJECT_T=67
    NULL_LIT=68
    BOOL=69
    FLOAT=70
    INT=71
    STRING=72
    CHAR=73
    IDENTIFIER=74
    WS=75
    LINE_COMMENT=76
    BLOCK_COMMENT=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def usingDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.UsingDirectiveContext)
            else:
                return self.getTypedRuleContext(ExprParser.UsingDirectiveContext,i)


        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(ExprParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 88
                self.usingDirective()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16559246409728) != 0):
                self.state = 94
                self.typeDeclaration()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsingDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USING(self):
            return self.getToken(ExprParser.USING, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(ExprParser.QualifiedNameContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_usingDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsingDirective" ):
                listener.enterUsingDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsingDirective" ):
                listener.exitUsingDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsingDirective" ):
                return visitor.visitUsingDirective(self)
            else:
                return visitor.visitChildren(self)




    def usingDirective(self):

        localctx = ExprParser.UsingDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_usingDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ExprParser.USING)
            self.state = 103
            self.qualifiedName()
            self.state = 104
            self.match(ExprParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifiedNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.IDENTIFIER)
            else:
                return self.getToken(ExprParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return ExprParser.RULE_qualifiedName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedName" ):
                listener.enterQualifiedName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedName" ):
                listener.exitQualifiedName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiedName" ):
                return visitor.visitQualifiedName(self)
            else:
                return visitor.visitChildren(self)




    def qualifiedName(self):

        localctx = ExprParser.QualifiedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_qualifiedName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ExprParser.IDENTIFIER)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 107
                self.match(ExprParser.T__1)
                self.state = 108
                self.match(ExprParser.IDENTIFIER)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(ExprParser.ClassDeclarationContext,0)


        def interfaceDeclaration(self):
            return self.getTypedRuleContext(ExprParser.InterfaceDeclarationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDeclaration" ):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = ExprParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeDeclaration)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.classDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.interfaceDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(ExprParser.CLASS, 0)

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def classBody(self):
            return self.getTypedRuleContext(ExprParser.ClassBodyContext,0)


        def accessModifier(self):
            return self.getTypedRuleContext(ExprParser.AccessModifierContext,0)


        def classModifier(self):
            return self.getTypedRuleContext(ExprParser.ClassModifierContext,0)


        def inheritanceList(self):
            return self.getTypedRuleContext(ExprParser.InheritanceListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = ExprParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 16492674416640) != 0):
                self.state = 118
                self.accessModifier()


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 60129542144) != 0):
                self.state = 121
                self.classModifier()


            self.state = 124
            self.match(ExprParser.CLASS)
            self.state = 125
            self.match(ExprParser.IDENTIFIER)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 126
                self.inheritanceList()


            self.state = 129
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABSTRACT(self):
            return self.getToken(ExprParser.ABSTRACT, 0)

        def SEALED(self):
            return self.getToken(ExprParser.SEALED, 0)

        def STATIC(self):
            return self.getToken(ExprParser.STATIC, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_classModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassModifier" ):
                listener.enterClassModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassModifier" ):
                listener.exitClassModifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassModifier" ):
                return visitor.visitClassModifier(self)
            else:
                return visitor.visitChildren(self)




    def classModifier(self):

        localctx = ExprParser.ClassModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classModifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 60129542144) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InheritanceListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualifiedName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.QualifiedNameContext)
            else:
                return self.getTypedRuleContext(ExprParser.QualifiedNameContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_inheritanceList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInheritanceList" ):
                listener.enterInheritanceList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInheritanceList" ):
                listener.exitInheritanceList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInheritanceList" ):
                return visitor.visitInheritanceList(self)
            else:
                return visitor.visitChildren(self)




    def inheritanceList(self):

        localctx = ExprParser.InheritanceListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_inheritanceList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(ExprParser.T__2)
            self.state = 134
            self.qualifiedName()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 135
                self.match(ExprParser.T__3)
                self.state = 136
                self.qualifiedName()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ClassMemberContext)
            else:
                return self.getTypedRuleContext(ExprParser.ClassMemberContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = ExprParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(ExprParser.T__4)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 33)) & ~0x3f) == 0 and ((1 << (_la - 33)) & 2233315887101) != 0):
                self.state = 143
                self.classMember()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(ExprParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldDeclaration(self):
            return self.getTypedRuleContext(ExprParser.FieldDeclarationContext,0)


        def constructorDeclaration(self):
            return self.getTypedRuleContext(ExprParser.ConstructorDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(ExprParser.MethodDeclarationContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_classMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassMember" ):
                listener.enterClassMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassMember" ):
                listener.exitClassMember(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassMember" ):
                return visitor.visitClassMember(self)
            else:
                return visitor.visitChildren(self)




    def classMember(self):

        localctx = ExprParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_classMember)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.fieldDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.constructorDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 153
                self.methodDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERFACE(self):
            return self.getToken(ExprParser.INTERFACE, 0)

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def interfaceBody(self):
            return self.getTypedRuleContext(ExprParser.InterfaceBodyContext,0)


        def accessModifier(self):
            return self.getTypedRuleContext(ExprParser.AccessModifierContext,0)


        def inheritanceList(self):
            return self.getTypedRuleContext(ExprParser.InheritanceListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_interfaceDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceDeclaration" ):
                listener.enterInterfaceDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceDeclaration" ):
                listener.exitInterfaceDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceDeclaration" ):
                return visitor.visitInterfaceDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def interfaceDeclaration(self):

        localctx = ExprParser.InterfaceDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_interfaceDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 16492674416640) != 0):
                self.state = 156
                self.accessModifier()


            self.state = 159
            self.match(ExprParser.INTERFACE)
            self.state = 160
            self.match(ExprParser.IDENTIFIER)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 161
                self.inheritanceList()


            self.state = 164
            self.interfaceBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interfaceMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.InterfaceMemberContext)
            else:
                return self.getTypedRuleContext(ExprParser.InterfaceMemberContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_interfaceBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceBody" ):
                listener.enterInterfaceBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceBody" ):
                listener.exitInterfaceBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceBody" ):
                return visitor.visitInterfaceBody(self)
            else:
                return visitor.visitChildren(self)




    def interfaceBody(self):
